# preff

./: .ghc.environment.x86_64-linux-9.4.2  .gitignore  CHANGELOG.md  Makefile  cabal.project  minieff.cabal  preff.cabal  safe-mutation.cabal  shell.nix
ambiguity-effects/: ambiguity-effects.cabal
ambiguity-effects/src/: FreerSimple.hs  FusedEffects.hs  MiniEff.hs  Mtl.hs  Polysemy.hs
ambiguity-effects/src/Ambig/: FreerSimple.hs  FusedEffects.hs  MiniEff.hs  Mtl.hs  Polysemy.hs  PolysemyPlugin.hs
bench/: Main.hs
examples/: CustomerEx.hs  CustomerPScoped.hs  CustomerScoped.hs
examples/Free/: Experiment.hs
examples/customers/: CustomerEx.hs  CustomerPScoped.hs  CustomerScoped.hs  Utils.hs
exe/: Main.hs
nix/: sources.json
safe-mutation-plugin/: Plugin.hs  safe-mutation-plugin.cabal
src/: Arrays.hs  Example2.hs  FreeExperiment.hs  MiniEff.hs  OpenUnion.hs  PMiniEff.hs  PPrEff.hs  Plugin.hs  PrEff.hs  SerialArrays.hs  Singletons.hs  Store.hs  Utils.hs
src/Control/: IxMonad.hs
src/Data/: ListP.hs
src/MiniEff/Parameterised/: Array.hs  Protocol.hs  State.hs
src/MiniEff/Simple/: Examples.hs  Reader.hs  State.hs  Writer.hs
src/Parameterised/: Array.hs  Protocol.hs  State.hs
src/PrEff/Codensity/: Reader.hs  State.hs
src/PrEff/Parameterised/: Array.hs  NonDet.hs  Protocol.hs  Reader.hs  Session.hs  State.hs
src/PrEff/Simple/: Examples.hs  Reader.hs  State.hs  Writer.hs
src/Simple/: Examples.hs  Reader.hs  State.hs  Writer.hs
tests/: Test.hs
type-list/: logs.txt  safe-mutation.cabal
type-list/exe/: Main.hs
type-list/safe-mutation-plugin/: CHANGELOG.md  Plugin.hs
type-list/src/: Arrays.hs  SerialArrays.hs  Utils.hs
type-list/src/Parameterised/: Array.hs  Protocol.hs  State.hs
type-list/src/Simple/: Reader.hs  State.hs
