cabal-version:   3.0
name:            preff
version:         0.1.0.0
license:
author:          Fendor
maintainer:      power.walross@gmail.com
build-type:      Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/fendor/preff.git

common warnings
  ghc-options: -Wall

common exts
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    PartialTypeSignatures
    PolyKinds
    QualifiedDo
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings, exts
  exposed-modules:
    Control.IxMonad
    Data.ListP
    FreeExperiment
    PPrEff
    PrEff
    PrEff.Parameterised.Array
    PrEff.Parameterised.NonDet
    PrEff.Parameterised.Protocol
    PrEff.Parameterised.Reader
    PrEff.Parameterised.State
    PrEff.Simple.Examples
    PrEff.Simple.Reader
    PrEff.Simple.State
    PrEff.Simple.Writer
    SerialArrays

  build-depends:
    , array
    , base                  >=4.14.3.0
    , containers
    , first-class-families
    , free
    , ghc-prim
    , kan-extensions
    , profunctors
    , random
    , singletons
    , singletons-base
    , stm
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

library examples
  import:           exts
  exposed-modules:
    CustomerEx
    CustomerPScoped
    CustomerScoped
    Utils

  hs-source-dirs:   examples/customers/
  build-depends:
    , base
    , containers
    , directory
    , filepath
    , preff
    , text

  default-language: Haskell2010

benchmark free-encodings
  import:         exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  build-depends:
    , base
    , criterion
    , free
    , kan-extensions
    , preff
    , profunctors
