cabal-version:   3.0
name:            preff
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Fendor
maintainer:      power.walross@gmail.com
build-type:      Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/fendor/preff.git

common warnings
  ghc-options: -Wall

common exts
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    PartialTypeSignatures
    PolyKinds
    QualifiedDo
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings, exts
  exposed-modules:
    Control.IxMonad
    Data.ListP
    PPrEff
    PrEff
    PrEff.Codensity.Reader
    PrEff.Codensity.State
    PrEff.Parameterised.NonDet
    PrEff.Parameterised.Reader
    PrEff.Parameterised.Session
    PrEff.Parameterised.State
    PrEff.Simple.Examples
    PrEff.Simple.Reader
    PrEff.Simple.State
    PrEff.Simple.Writer

  build-depends:
    , array                 >=0.5.5    && <0.6
    , base                  >=4.14.3.0 && <5
    , containers            >=0.6.7    && <0.7
    , ghc-prim
    , first-class-families  >=0.8.0    && <0.9
    , random                >=1.2.1    && <1.3
    , singletons            >=3.0.2    && <3.1
    , singletons-base       >=3.0      && <3.3
    , stm                   >=2.5.1    && <2.6
    , text                  >=2.0.2    && <2.3

  hs-source-dirs:   src
  default-language: Haskell2010

library examples
  import:           exts
  exposed-modules:
    CustomerEx
    CustomerPScoped
    CustomerScoped
    Utils

  hs-source-dirs:   examples/customers/
  build-depends:
    , base
    , containers
    , directory       >=1.3.8   && <1.4
    , filepath        >=1.4.100 && <1.5
    , free            >=5.2     && <5.3
    , kan-extensions  >=5.2.5   && <5.3
    , preff
    , profunctors     >=5.6.2   && <5.7
    , stm
    , text

  default-language: Haskell2010

library experiments
  import:           exts
  exposed-modules:  Free.Experiment
  hs-source-dirs:   examples/
  build-depends:
    , base
    , containers
    , directory
    , filepath
    , free
    , kan-extensions
    , preff
    , profunctors
    , text

  default-language: Haskell2010

benchmark free-encodings
  import:           exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench
  build-depends:
    , base
    , criterion
    , experiments
    , free
    , kan-extensions
    , preff
    , profunctors

  default-language: Haskell2010
