cabal-version:   3.0
name:            safe-mutation
version:         0.1.0.0
license:
author:          Fendor

maintainer:      power.walross@gmail.com
build-type:      Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

common exts
  default-extensions:
    -- Type system
    ScopedTypeVariables
    PolyKinds
    RankNTypes
    DataKinds
    ConstraintKinds
    StandaloneKindSignatures
    -- Type Families and MPTC
    MultiParamTypeClasses
    InstanceSigs
    FunctionalDependencies
    TypeFamilies
    GADTs
    FlexibleContexts
    FlexibleInstances
    -- Programming Convenience
    TypeApplications
    TypeOperators
    LambdaCase
    BangPatterns
    PartialTypeSignatures
    InstanceSigs

library
  import:           warnings, exts
  exposed-modules:
    Arrays
    Store
    Utils
    Simple.State
    Parameterised.Array
    Parameterised.State

  build-depends:
    , array
    , base                  >=4.14.3.0
    , containers
    , ghc
    , ghc-prim
    , random
    , safe-mutation-plugin
    , stm

  -- Directories containing source files.
  hs-source-dirs:   src

  ghc-options: -Wno-unticked-promoted-constructors

  default-language: Haskell2010

executable safe-mutation
  import:           warnings, exts
  main-is:          Main.hs
  build-depends:
    , base
    , safe-mutation
    , safe-mutation-plugin

  -- Directories containing source files.
  hs-source-dirs:   exe

  -- Base language which the package is written in.
  default-language: Haskell2010
