cabal-version: 3.0
name:          ambiguity-effects
version:       0.1.0.0
license:
author:        power.walross@gmail.com
maintainer:    Fendor
build-type:    Simple

common warnings
  ghc-options: -Wall

common exts
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    PartialTypeSignatures
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    QualifiedDo

library
  import:           warnings, exts
  exposed-modules:
    Ambig.FreerSimple
    Ambig.FusedEffects
    Ambig.MiniEff
    Ambig.Mtl
    Ambig.Polysemy
    Ambig.PolysemyPlugin

  build-depends:
    , base
    , freer-simple
    , fused-effects
    , minieff
    , polysemy
    , polysemy-plugin

  -- Directories containing source files.
  hs-source-dirs:   src

  -- Base language which the package is written in.
  default-language: Haskell2010
