cabal-version:   3.0
name:            safe-mutation-plugin
version:         0.1.0.0

-- synopsis:
-- description:
license:
author:          Fendor
maintainer:      power.walross@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Plugin

  -- other-modules:
  -- other-extensions:
  build-depends:
    , array
    , base        >=4.14.3.0
    , containers
    , ghc
    , ghc-prim
    , random
    , stm

  hs-source-dirs:   .
  default-language: Haskell2010
